--- a/views/computers.html
+++ b/views/computers.html
@@ -1,4 +1,5 @@
-<html lang="en" class="govuk-template ">
+<!DOCTYPE html>
+<html lang="en" class="govuk-template">
 
 <head>
 	<title>Active Directory Reporting Tool</title>
@@ -7,200 +8,190 @@
 	<script src="/javascript/ad.js"></script>
 
 	<script>
-		$(document).ready(function () {
-			var csvData = null;
+		$(function () {
+			let csvData = null;
 
-			$("#showUsers").hide();
-			$("#saveCSVDiv").hide();
-			$("#daysFilter").hide();
-			$("#loading").hide();
-
+			$('#showUsers').hide();
+			$('#saveCSVDiv').hide();
+			$('#daysFilter').hide();
+			$('#loading').hide();
 
 			$.ajax({
-				type: "GET",
-				url: "getOu/domain",
-				dataType: "json",
+				type: 'GET',
+				url: 'getOu/domain',
+				dataType: 'json',
 				success: function (result, status, xhr) {
-					if (result["computers"] == "null") {
-						window.location.replace("/");
+					if (result['computers'] === 'null') {
+						window.location.replace('/');
 					}
 
+					let htmlOutput = '<option value="All">All</option>';
 
-					var t = '<option value="All">All</option>';
-
-
-					for (i = 0; i < result["ou"].length; i++) {
-						console.log(result["ou"][i]["Name"]);
-						var ou = result["ou"][i]["Name"]
-						var dn = result["ou"][i]["DistinguishedName"]
-						t += '<option value="' + dn + '">' + ou + '</option>';
+					for (let index = 0; index < result['ou'].length; index++) {
+						console.log(result['ou'][index]['Name']);
+						const ou = result['ou'][index]['Name']
+						const dn = result['ou'][index]['DistinguishedName']
+						htmlOutput += `<option value="${dn}">${ou}</option>`;
 					}
-					var ouSelect = $(t);
-					$("#ouSelect").html(ouSelect);
+					const ouSelect = $(htmlOutput);
+					$('#ouSelect').html(ouSelect);
 				}
 			});
 
+			$('#reportSelect').change(function () {
+				const reports = ['All Computers'];
 
-			$("#reportSelect").change(function (e) {
-				var reports = ['All Computers'];
-
-				if (reports.indexOf($("#reportSelect").val()) !== -1) {
-					$("#daysFilter").hide();
+				if (reports.indexOf($('#reportSelect').val()) !== -1) {
+					$('#daysFilter').hide();
 				} else {
-					$("#daysFilter").show();
+					$('#daysFilter').show();
 				}
 			});
 
-
-			$("#runReport").click(function (e) {
-				$("#showGroups").hide();
-				$("#saveCSVDiv").hide();
-
-
-
-
+			$('#runReport').click(function () {
+				$('#showGroups').hide();
+				$('#saveCSVDiv').hide();
 
 				$.ajax({
-					type: "GET",
-					url: "report/computers/" + $("#reportSelect").val() + "/" + $("#daysSelect")
-					.val() + "/" + $("#ouSelect").val() + "/" + $("#quickQuery").is(':checked'),
-					dataType: "json",
+					type: 'GET',
+					url: `report/computers/${$('#reportSelect').val()}/${$('#daysSelect').val()}/${$('#ouSelect').val()}/${$('#quickQuery').is(':checked')}`,
+					dataType: 'json',
 					success: function (result, status, xhr) {
-						if (result["computers"] == "null") {
-							window.location.replace("/");
+						if (result['computers'] === 'null') {
+							window.location.replace('/');
 						}
 
+						const queryTime = (result['queryTime'])
+						const data = [];
+						let htmlOutput =
+							`<h2 class="govuk-heading-l">${$('#reportSelect').val()}</h2>`;
 
-						var queryTime = (result["queryTime"])
-						var data = [];
-						var t = '<h2 class="govuk-heading-l">' + $("#reportSelect").val() +
-							'</h2>';
+						htmlOutput += '<table class="govuk-table">';
+						htmlOutput += '<thead class="govuk-table__head">';
+						htmlOutput += '<tr class="govuk-table__row">';
+						htmlOutput += '<th scope="col" class="govuk-table__header">Name</th>';
+						htmlOutput +=
+							'<th scope="col" class="govuk-table__header">IP address</th>';
+						htmlOutput += '<th scope="col" class="govuk-table__header">OU</th>';
+						htmlOutput +=
+							'<th scope="col" class="govuk-table__header">Operating System</th>';
+						htmlOutput += '</tr></thead>';
 
-						t += '<table class="govuk-table">';
-						t += '<thead class="govuk-table__head">';
-						t += '<tr class="govuk-table__row">';
-						t += '<th scope="col" class="govuk-table__header">Name</th>';
-						t += '<th scope="col" class="govuk-table__header">IP address</th>';
-						t += '<th scope="col" class="govuk-table__header">OU</th>';
-						t += '<th scope="col" class="govuk-table__header">Operating System</th>';
-						t += '</tr></thead>';
-
-						var userDetails = [userDetails = "computerName", "logon",
-							"distinguishedName", "objectGuid", "badLogonCount", "created",
-							"deleted", "enabled", "lockedOut", "passwordLastSet",
-							"passwordExpired", "passwordNeverExpires", "IPv4Address",
-							"OperatingSystem", "OperatingSystemVersion", "memberOf"
+						const userDetails = [userDetails = 'computerName', 'logon',
+							'distinguishedName', 'objectGuid', 'badLogonCount', 'created',
+							'deleted', 'enabled', 'lockedOut', 'passwordLastSet',
+							'passwordExpired', 'passwordNeverExpires', 'IPv4Address',
+							'OperatingSystem', 'OperatingSystemVersion', 'memberOf'
 						];
 						data.push(userDetails);
-						var totalCount = 0;
-						for (i = 0; i < result["computers"].length; i++) {
-							var userName = result["computers"][i]["ComputerName"];
-							var logon = parseDate(result["computers"][i]["LastLogonDate"])
-							var username = result["computers"][i]["ComputerName"];
-							var memberOf = result["computers"][i]["MemberOf"];
-							var dn = result["computers"][i]["DistinguishedName"];
-							var distinguishedName = dn.replace(/,/g, ";");
-							var objectGuid = result["computers"][i]["ObjectGuid"];
-							var badLogonCount = result["computers"][i]["BadLogonCount"];
-							var created = parseDate(result["computers"][i]["Created"]);
-							var deleted = result["computers"][i]["Deleted"];
-							var enabled = result["computers"][i]["Enabled"];
-							var lockedOut = result["computers"][i]["LockedOut"];
-							var passwordLastSet = parseDate(result["computers"][i][
-								"PasswordLastSet"
+						let totalCount = 0;
+						for (let index = 0; index < result['computers'].length; index++) {
+							const userName = result['computers'][index]['ComputerName'];
+							const logon = parseDate(result['computers'][index]['LastLogonDate'])
+							const username = result['computers'][index]['ComputerName'];
+							const memberOf = result['computers'][index]['MemberOf'];
+							const dn = result['computers'][index]['DistinguishedName'];
+							const distinguishedName = dn.replace(/,/g, ';');
+							const objectGuid = result['computers'][index]['ObjectGuid'];
+							const badLogonCount = result['computers'][index]['BadLogonCount'];
+							const created = parseDate(result['computers'][index]['Created']);
+							const deleted = result['computers'][index]['Deleted'];
+							const enabled = result['computers'][index]['Enabled'];
+							const lockedOut = result['computers'][index]['LockedOut'];
+							const passwordLastSet = parseDate(result['computers'][index][
+								'PasswordLastSet'
 							]);
-							var passwordExpired = result["computers"][i]["PasswordExpired"];
-							var passwordNeverExpires = result["computers"][i][
-								"PasswordNeverExpires"
+							const passwordExpired = result['computers'][index]['PasswordExpired'];
+							const passwordNeverExpires = result['computers'][index][
+								'PasswordNeverExpires'
 							];
-							var IPv4Address = result["computers"][i]["IPv4Address"];
-							var OperatingSystem = result["computers"][i]["OperatingSystem"];
-							var OperatingSystemVersion = result["computers"][i][
-								"OperatingSystemVersion"
+							const IPv4Address = result['computers'][index]['IPv4Address'];
+							const OperatingSystem = result['computers'][index]['OperatingSystem'];
+							const OperatingSystemVersion = result['computers'][index][
+								'OperatingSystemVersion'
 							];
 
+							htmlOutput += '<tr class="govuk-table__row">';
+							htmlOutput += '<td class="govuk-table__cell">';
+							htmlOutput +=
+								'<details class="govuk-details" data-module="govuk-details">';
+							htmlOutput += '<summary class="govuk-details__summary">';
+							htmlOutput += '<span class="govuk-details__summary-text">';
+							htmlOutput += username;
+							htmlOutput += '</span>';
+							htmlOutput += '</summary>';
+							htmlOutput += '<div class="govuk-details__text">';
+							htmlOutput += '<ul class="govuk-list govuk-list">';
+							htmlOutput +=
+								`<li><b>Distinguished Name</b>: ${distinguishedName}</li>`;
+							htmlOutput += `<li><b>Object Guid</b>: ${objectGuid}</li>`;
+							htmlOutput += `<li><b>BadLogonCount</b>: ${badLogonCount}</li>`;
+							htmlOutput += `<li><b>Created</b>: ${created}</li>`;
+							htmlOutput += `<li><b>Deleted</b>: ${deleted}</li>`;
+							htmlOutput += `<li><b>Enabled</b>: ${enabled}</li>`;
+							htmlOutput += `<li><b>LockedOut</b>: ${lockedOut}</li>`;
+							htmlOutput +=
+								`<li><b>PasswordLastSet</b>: ${parseDate(passwordLastSet)}</li>`;
+							htmlOutput += `<li><b>PasswordExpired</b>: ${passwordExpired}</li>`;
+							htmlOutput +=
+								`<li><b>PasswordNeverExpires</b>: ${passwordNeverExpires}</li>`;
+							htmlOutput += `<li><b>IPv4Address</b>: ${IPv4Address}</li>`;
+							htmlOutput += `<li><b>OperatingSystem</b>: ${OperatingSystem}</li>`;
+							htmlOutput +=
+								`<li><b>OperatingSystemVersion</b>: ${OperatingSystemVersion} </li>`;
+							htmlOutput += `<li><b>LastLogonDate</b>: ${logon}</li>`;
+							htmlOutput +=
+								`<li><b>Member of</b>: ${result['computers'][index]['MemberOf']}</li>`;
+							htmlOutput += '</ul>';
+							htmlOutput += '</div>';
+							htmlOutput += '</details>';
+							htmlOutput +=
+								`</td><td class='govuk-table__cell'>${IPv4Address}</td>`;
+							htmlOutput +=
+								`</td><td class='govuk-table__cell'>${distinguishedName}</td>`;
+							htmlOutput +=
+								`</td><td class='govuk-table__cell'>${OperatingSystem}, ${OperatingSystemVersion}</td>`;
+							htmlOutput += '</tr>';
 
-							t += '<tr class="govuk-table__row">';
-							t += "<td class='govuk-table__cell'>";
-							t += '<details class="govuk-details" data-module="govuk-details">';
-							t += '<summary class="govuk-details__summary">';
-							t += '<span class="govuk-details__summary-text">';
-							t += username;
-							t += '</span>';
-							t += '</summary>';
-							t += '<div class="govuk-details__text">';
-							t += '<ul class="govuk-list govuk-list">';
-							t += '<li><b>Distinguished Name</b>: ' + distinguishedName + '</li>';
-							t += '<li><b>Object Guid</b>: ' + objectGuid + '</li>';
-							t += '<li><b>BadLogonCount</b>: ' + badLogonCount + '</li>';
-							t += '<li><b>Created</b>: ' + created + '</li>';
-							t += '<li><b>Deleted</b>: ' + deleted + '</li>';
-							t += '<li><b>Enabled</b>: ' + enabled + '</li>';
-							t += '<li><b>LockedOut</b>: ' + lockedOut + '</li>';
-							t += '<li><b>PasswordLastSet</b>: ' + parseDate(passwordLastSet) +
-								'</li>';
-							t += '<li><b>PasswordExpired</b>: ' + passwordExpired + '</li>';
-							t += '<li><b>PasswordNeverExpires</b>: ' + passwordNeverExpires +
-								'</li>';
-							t += '<li><b>IPv4Address</b>: ' + IPv4Address + '</li>';
-							t += '<li><b>OperatingSystem</b>: ' + OperatingSystem + '</li>';
-							t += '<li><b>OperatingSystemVersion</b>: ' + OperatingSystemVersion +
-								'</li>';
-							t += '<li><b>LastLogonDate</b>: ' + logon + '</li>';
-							t += '<li><b>Member of</b>: ' + result["computers"][i]["MemberOf"] +
-								'</li>';
-							t += '</ul>';
-							t += '</div>';
-							t += '</details>';
-							t += "</td><td class='govuk-table__cell'>" + IPv4Address + "</td>";
-							t += "</td><td class='govuk-table__cell'>" + distinguishedName +
-								"</td>";
-							t += "</td><td class='govuk-table__cell'>" + OperatingSystem + " , " +
-								OperatingSystemVersion + "</td>";
-							t += '</tr>';
 							userDetails = [userName, logon, distinguishedName, objectGuid,
 								badLogonCount, created, deleted, enabled, lockedOut,
 								passwordLastSet, passwordExpired, passwordNeverExpires,
 								IPv4Address, OperatingSystem, OperatingSystemVersion, memberOf
 							];
 
-
-
-
 							data.push(userDetails);
 							totalCount++;
 						}
-						t += "<tr><td>Total Count =  " + totalCount + "</td></tr>";
-						t += "<tr><td>Took  " + queryTime + " seconds</td></tr>";
+						htmlOutput += `<tr><td>Total Count = ${totalCount}</td></tr>`;
+						htmlOutput += `<tr><td>Took ${queryTime} seconds</td></tr>`;
+						htmlOutput += '</tbody></table>';
 
-						t += '</tbody></table>';
+						const reportData = $(htmlOutput);
+						$('#report').html(reportData);
 
-						var reportData = $(t);
-						$("#report").html(reportData);
-
-						csvData = data.map(e => e.join(",")).join("\n");
-						$("#saveCSVDiv").show();
-						$("#downloadlink").hide();
+						csvData = data.map(e => e.join(',')).join('\n');
+						$('#saveCSVDiv').show();
+						$('#downloadlink').hide();
 					},
 					error: function (xhr, status, error) {
-						alert("Result: " + status + " " + error + " " + xhr.status + " " + xhr
-							.statusText)
+						alert(`Result: ${status} ${error} ${xhr.status} ${xhr.statusText}`);
 					}
 				});
 			});
 
-			$("#saveCSVButton").click(function (e) {
-				saveCSVLocation = $("#saveLocation").val();
-				var link = document.getElementById('downloadlink');
+			$('#saveCSVButton').click(function (e) {
+				saveCSVLocation = $('#saveLocation').val();
+				const link = document.getElementById('downloadlink');
 				link.href = makeTextFile(csvData);
-				$("#downloadlink").show();
+				$('#downloadlink').show();
 			});
+
 			$(document).ajaxStart(function () {
-				$("#loading").show();
+				$('#loading').show();
 			});
 
 			$(document).ajaxStop(function () {
-				$("#loading").hide();
+				$('#loading').hide();
 			});
 
 		});
@@ -208,8 +199,7 @@
 </head>
 
 <body>
-
-	<header class="govuk-header " role="banner" data-module="govuk-header">
+	<header class="govuk-header" role="banner" data-module="govuk-header">
 		<div class="govuk-header__container govuk-width-container">
 			<div class="govuk-header__logo">
 				<a href="#" class="govuk-header__link govuk-header__link--homepage">
@@ -267,7 +257,6 @@
 		</div>
 	</header>
 
-
 	<div class="govuk-breadcrumbs">
 		<ol class="govuk-breadcrumbs__list">
 			<li class="govuk-breadcrumbs__list-item">
@@ -281,7 +270,6 @@
 
 	<div class="govuk-!-padding-bottom-3"></div>
 
-
 	<div class="govuk-form-group">
 		<label class="govuk-label" for="sort">
 			Select a Report
@@ -293,14 +281,11 @@
 		</select>
 	</div>
 
-
 	<div class="govuk-form-group">
 		<label class="govuk-label" for="sort">
 			Select an OU
 		</label>
-		<select class="govuk-select" id="ouSelect" name="ouSelect">
-			<div id="ouSelect"></div>
-		</select>
+		<select class="govuk-select" id="ouSelect" name="ouSelect"></select>
 	</div>
 
 	<div id="daysFilter" class="govuk-form-group">
@@ -322,15 +307,9 @@
 		</div>
 	</div>
 
-
 	<button id="runReport" class="govuk-button" data-module="govuk-button">
 		Run Report
 	</button>
-
-
-
-
-
 
 	<div class="textAlignCenter" id="loading" name="loading">
 		<img src="/assets/images/loading.gif" />
